--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@ body {
   );
   text-align: center;
 }
+
+.app-title {
+  margin-bottom: 75px;
+  margin-top: 50px;
+  font-size: 76px;
+  color: #0ccac4;
+  font-family: 'Calligraffitti', cursive;
+}
