--- a/src/components/cards/card.styles.css
+++ b/src/components/cards/card.styles.css
@@ -11,6 +11,7 @@
   transform: translateZ(0);
   transition: transform 0.25s ease-out;
   border: solid 5px black;
+  min-width: 200px;
 }
 
 .customer-container:hover {
